# lookout-mcp

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: engineering-decisions.md  final-compliance-audit.md  technical-spec.md  testing.md
migrations/: 001_core_domain_model.sql
scripts/: smoke.py
src/lookout_mcp/: __init__.py  config.py  db.py  demo_ui.py  errors.py  schemas.py  seed.py  server.py
src/lookout_mcp/tools/: __init__.py  api.py  registry.py  workflow.py
tests/: test_agent_workflow.py  test_backend_api.py  test_bootstrap.py  test_contract_edges.py  test_contract_unit.py  test_domain_data_model.py  test_golden_contract.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  api.ts  styles.css
